--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-JWT_SECRET=key
+Session_SECRET=key
 EMAIL_USER=2004dikshityadav@gmail.com
 EMAIL_PASS=svoe eqar fbnk kmek
+PORT=5500
+MONGO_URI=mongodb+srv://2004dikshityadav:DIiXPWZM9o2TQ2AK@dikshit.wn6pzgk.mongodb.net/?retryWrites=true&w=majority&appName=Dikshit
